[project]
name = "comfyui-imagecaptioner"
description = "A ComfyUI extension for generating captions for your images. Runs on your own system, no external services used, no filter."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["dashscope", "http"]

[project.urls]
Repository = "https://github.com/neverbiasu/ComfyUI-ImageCaptioner"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-ImageCaptioner"
Icon = ""
